--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
+        <script src="js/fetch.umd.js"></script>
+        <script src="js/app.js"></script>
     </head>
     <body>
 
